--- a/ios/testingreactmaps/Info.plist
+++ b/ios/testingreactmaps/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSCameraUsageDescription</key>
+    <string>We use your location to show where you are on the map.</string>
+    <key>NSLocationTemporaryUsageDescriptionDictionary</key>
+	<string>We use your location to show where you are on the map.</string>
+    <key>NSLocationTemporaryUsageDescriptionTypeAllowOnce</key>
+    <string>We use your location to show where you are on the map.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We use your location to show where you are on the map.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>We use your location to show where you are on the map.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use your location to show where you are on the map.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use your location to show where you are on the map.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
